--- a/index.html
+++ b/index.html
@@ -2,23 +2,69 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- in public/index.html -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Vite + React</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" type="image/png" sizes="16x16" href="/plugins/images/favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Ample Admin Template - The Ultimate Multipurpose admin template</title>
+  <!-- Bootstrap Core CSS -->
+  <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Menu CSS -->
+  <link href="/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
+  <!-- toast CSS -->
+  <link href="/plugins/bower_components/toast-master/css/jquery.toast.css" rel="stylesheet">
+  <!-- morris CSS -->
+  <link href="/plugins/bower_components/morrisjs/morris.css" rel="stylesheet">
+  <!-- chartist CSS -->
+  <link href="/plugins/bower_components/chartist-js/dist/chartist.min.css" rel="stylesheet">
+  <link href="/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css"
+    rel="stylesheet">
+  <!-- animation CSS -->
+  <link href="/css/animate.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="/css/style.css" rel="stylesheet">
+  <!-- color CSS -->
+  <link href="/css/colors/default.css" id="theme" rel="stylesheet">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-  <!-- Bootstrap JS (for Navbar toggle) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <script type="module" src="/src/main.jsx"></script>
+  <!-- All Jquery -->
+  <!-- ============================================================== -->
+  <script src="/plugins/bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- Menu Plugin JavaScript -->
+  <script src="/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.js"></script>
+  <!--slimscroll JavaScript -->
+  <script src="/js/jquery.slimscroll.js"></script>
+  <!--Wave Effects -->
+  <script src="/js/waves.js"></script>
+  <!--Counter js -->
+  <script src="/plugins/bower_components/waypoints/lib/jquery.waypoints.js"></script>
+  <script src="/plugins/bower_components/counterup/jquery.counterup.min.js"></script>
+  <!-- chartist chart -->
+  <script src="/plugins/bower_components/chartist-js/dist/chartist.min.js"></script>
+  <script src="/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
+  <!-- Sparkline chart JavaScript -->
+  <script src="/plugins/bower_components/jquery-sparkline/jquery.sparkline.min.js"></script>
+  <!-- Custom Theme JavaScript -->
+  <script src="/js/custom.min.js"></script>
+  <script src="/js/dashboard1.js"></script>
+  <script src="/plugins/bower_components/toast-master/js/jquery.toast.js"></script>
 </body>
 
 </html>
